Revert "fix: layout shift caused by loading svgs"
This reverts commit ebf1e6db6d88b2e7c5caed45ae1f76ca5957308e.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+/* scrollbars */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+}
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 0;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.4);
+}
+
 /* page */
 .page-enter-active,
 .page-leave-active {
